# medialinker

./: .gitignore  CHANGELOG.md  OVERVIEW.md  README.md  common.py  create_test_library.py  features.md  go.mod  main.go  make_movies_links.py  make_tv_links.py  medialnk.toml  overview.md  pyproject.toml  technical.md  test.txt  test_path_guard.py
cmd/: clean.go  orphans.go  root.go  sync.go  testlib.go  validate.go  watch.go
internal/common/: helpers.go  pathguard.go  symlink.go  video.go
internal/config/: config.go
internal/health/: health.go
internal/logger/: logger.go
internal/movies/: movies.go  parse.go
internal/orphans/: orphans.go
internal/resolver/: confidence.go  tmdb.go
internal/testlib/: generate.go
internal/tv/: episodes.go  parse.go  tv.go
medialnk/: __init__.py  __main__.py  cli.py  common.py  config.py  medialnk.toml  movies.py  resolver.py  test_library.py  tv.py
