[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medialnk"
version = "1.0.1"
description = "Symlink-based media library manager for Jellyfin/arr stacks"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
medialnk = "medialnk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["medialnk*"]